[gd_scene load_steps=25 format=3 uid="uid://ltet03dxrba8"]

[ext_resource type="Script" path="res://Level 1 Puzz/Puz1.gd" id="1_0wjli"]
[ext_resource type="Texture2D" uid="uid://c030ghydlywh1" path="res://Level 1 Puzz/FlowChartPlaceHolder.png" id="1_cb7x0"]
[ext_resource type="Texture2D" uid="uid://imoy6a5ughb7" path="res://Level 1 Puzz/FlowChartStart v1.png" id="3_a73a3"]
[ext_resource type="PackedScene" uid="uid://bwiwo5m4pqomk" path="res://Level 1 Puzz/slot.tscn" id="3_taeua"]
[ext_resource type="Texture2D" uid="uid://bdxi7sgynqj72" path="res://Level 1 Puzz/IOlow chart v2.png" id="5_xff4s"]
[ext_resource type="Texture2D" uid="uid://bbmmt1qbjyaql" path="res://Level 1 Puzz/EndChartv2.png" id="6_0haen"]
[ext_resource type="Texture2D" uid="uid://c60h3jms6lp2s" path="res://Level 1 Puzz/Process FlowChart.png" id="6_fo8x7"]
[ext_resource type="Texture2D" uid="uid://c1cg87aev5wqo" path="res://Level 1 Puzz/LongEnergy.png" id="7_4xki8"]
[ext_resource type="Texture2D" uid="uid://douhshicycg8" path="res://Level 1 Puzz/Switch offv2.png" id="8_1fthl"]
[ext_resource type="Texture2D" uid="uid://d4ir2juge12gq" path="res://Level 1 Puzz/ShortEnergy.png" id="8_v6u7d"]
[ext_resource type="Texture2D" uid="uid://cmhjomhtdswbg" path="res://Level 1 Puzz/Switch onv2.png" id="9_0tfgi"]
[ext_resource type="Texture2D" uid="uid://dw5xdssu3jfqj" path="res://Level 1 Puzz/FlowChartPuzzleHolder.png" id="9_2tl4s"]
[ext_resource type="Texture2D" uid="uid://wsfo3s58t0ck" path="res://Level 1 Puzz/arrowDown.png" id="10_e8ei4"]
[ext_resource type="FontFile" uid="uid://galii81ef8j4" path="res://Level 1 Puzz/fonts/ThaleahFat.ttf" id="11_nkbn4"]
[ext_resource type="Texture2D" uid="uid://dwxm6g8xssmua" path="res://Level 1 Puzz/ButtonX.png" id="12_0nruy"]
[ext_resource type="Texture2D" uid="uid://ddxaq3io48o8y" path="res://Level 1 Puzz/ButtonXClicked.png" id="13_16p15"]

[sub_resource type="Gradient" id="Gradient_s4jrh"]
offsets = PackedFloat32Array(0.0470588, 1)
colors = PackedColorArray(1, 1, 1, 0.141176, 0, 0, 0, 0.447059)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_62wrn"]
gradient = SubResource("Gradient_s4jrh")
use_hdr = true
fill = 2
fill_from = Vector2(0.503759, 0.477444)
fill_to = Vector2(0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_52rnq"]
atlas = ExtResource("7_4xki8")
region = Rect2(0, 0, 9, 42)

[sub_resource type="Gradient" id="Gradient_c20xq"]
colors = PackedColorArray(0.462745, 1, 0, 1, 0, 1, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i3n3m"]
gradient = SubResource("Gradient_c20xq")
use_hdr = true
fill = 1
fill_from = Vector2(0.508065, 0.455645)
fill_to = Vector2(0.661654, 0.289474)

[sub_resource type="Gradient" id="Gradient_wmqf4"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_svk2d"]
gradient = SubResource("Gradient_wmqf4")
use_hdr = true
fill = 1
fill_from = Vector2(0.508065, 0.447581)
fill_to = Vector2(0.639098, 0.281955)

[sub_resource type="SpriteFrames" id="SpriteFrames_vndu1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_1fthl")
}],
"loop": false,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_0tfgi")
}],
"loop": false,
"name": &"On",
"speed": 5.0
}]

[node name="FlowPuz" type="CanvasLayer"]
layer = 0
script = ExtResource("1_0wjli")

[node name="TextureRect3" type="TextureRect" parent="."]
z_index = -2
offset_left = 1.0
offset_right = 1151.0
offset_bottom = 646.0
texture = SubResource("GradientTexture2D_62wrn")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 379.0
offset_top = 107.0
offset_right = 796.0
offset_bottom = 538.0
texture = ExtResource("1_cb7x0")
metadata/_edit_use_anchors_ = true

[node name="Start" type="Node2D" parent="."]
z_index = 1
position = Vector2(589, 144)

[node name="Slot1" parent="Start" instance=ExtResource("3_taeua")]

[node name="TextureRect" parent="Start/Slot1" index="0"]
Slot = 1

[node name="Slot1" parent="Start/Slot1" index="1"]
z_index = -2
text = "1"

[node name="Slot2" parent="Start" instance=ExtResource("3_taeua")]
offset_top = 54.0
offset_bottom = 54.0

[node name="TextureRect" parent="Start/Slot2" index="0"]
offset_left = -69.5
offset_top = -26.5
offset_right = 61.5
offset_bottom = 41.5
texture = ExtResource("6_fo8x7")
Slot = 3

[node name="Slot1" parent="Start/Slot2" index="1"]
z_index = -2
text = "3"

[node name="Slot3" parent="Start" instance=ExtResource("3_taeua")]
offset_top = 179.0
offset_bottom = 179.0

[node name="TextureRect" parent="Start/Slot3" index="0"]
offset_top = -33.0
offset_bottom = 30.0
texture = ExtResource("6_0haen")
Slot = 5

[node name="Slot1" parent="Start/Slot3" index="1"]
z_index = -2
text = "5"

[node name="Slot4" parent="Start" instance=ExtResource("3_taeua")]
offset_top = 286.0
offset_bottom = 286.0

[node name="TextureRect" parent="Start/Slot4" index="0"]
offset_left = -76.5
offset_top = -25.5
offset_right = 68.5
offset_bottom = 40.5
texture = ExtResource("5_xff4s")
Slot = 2

[node name="Slot1" parent="Start/Slot4" index="1"]
z_index = -2
text = "2"

[node name="Slot5" parent="Start" instance=ExtResource("3_taeua")]
offset_top = 351.0
offset_bottom = 351.0

[node name="TextureRect" parent="Start/Slot5" index="0"]
texture = ExtResource("5_xff4s")
Slot = 4

[node name="Slot1" parent="Start/Slot5" index="1"]
z_index = -2
text = "4"

[node name="LongEnergy1" type="TextureProgressBar" parent="Start"]
z_index = -1
offset_left = -6.0
offset_top = 69.0
offset_right = 34.0
offset_bottom = 168.0
fill_mode = 2
texture_progress = ExtResource("7_4xki8")

[node name="LongEnergy2" type="TextureProgressBar" parent="Start"]
z_index = -1
offset_left = -6.0
offset_top = 189.0
offset_right = 34.0
offset_bottom = 288.0
fill_mode = 2
texture_progress = ExtResource("7_4xki8")

[node name="LongEnergy3" type="TextureProgressBar" parent="Start"]
z_index = -1
offset_left = -6.0
offset_top = 303.0
offset_right = 34.0
offset_bottom = 402.0
fill_mode = 2
texture_progress = SubResource("AtlasTexture_52rnq")

[node name="ShortEnergy1" type="TextureProgressBar" parent="Start"]
z_index = -1
offset_left = -6.0
offset_top = 11.0
offset_right = 34.0
offset_bottom = 51.0
fill_mode = 2
texture_progress = ExtResource("8_v6u7d")

[node name="Green" type="PointLight2D" parent="."]
visible = false
z_index = 1
position = Vector2(516, 67)
energy = 1.5
texture = SubResource("GradientTexture2D_i3n3m")
offset = Vector2(-2, 8)
texture_scale = 3.38

[node name="Red" type="PointLight2D" parent="."]
z_index = 1
position = Vector2(516, 93)
energy = 1.5
texture = SubResource("GradientTexture2D_svk2d")
offset = Vector2(-2, 8)
texture_scale = 3.38

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(592, 324)
sprite_frames = SubResource("SpriteFrames_vndu1")
animation = &"Off"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 113.0
offset_top = 198.0
offset_right = 535.0
offset_bottom = 968.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_2tl4s")
patch_margin_left = 168
patch_margin_top = 168
patch_margin_right = 164
patch_margin_bottom = 164
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 116.0
offset_top = 28.0
offset_right = 266.0
offset_bottom = 108.0
scale = Vector2(1.4, 1.4)
texture = ExtResource("3_a73a3")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 116.0
offset_top = 184.0
offset_right = 266.0
offset_bottom = 264.0
scale = Vector2(1.4, 1.4)
texture = ExtResource("5_xff4s")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 116.0
offset_top = 334.0
offset_right = 266.0
offset_bottom = 414.0
scale = Vector2(1.4, 1.4)
texture = ExtResource("6_fo8x7")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 116.0
offset_top = 498.0
offset_right = 266.0
offset_bottom = 578.0
scale = Vector2(1.4, 1.4)
texture = ExtResource("5_xff4s")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect5" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 116.0
offset_top = 648.0
offset_right = 266.0
offset_bottom = 728.0
scale = Vector2(1.4, 1.4)
texture = ExtResource("6_0haen")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect6" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 208.0
offset_top = 130.0
offset_right = 236.0
offset_bottom = 168.0
scale = Vector2(1.35, 1.35)
texture = ExtResource("10_e8ei4")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect7" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 208.0
offset_top = 280.0
offset_right = 236.0
offset_bottom = 318.0
scale = Vector2(1.35, 1.35)
texture = ExtResource("10_e8ei4")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect8" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 208.0
offset_top = 444.0
offset_right = 236.0
offset_bottom = 482.0
scale = Vector2(1.35, 1.35)
texture = ExtResource("10_e8ei4")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect9" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 208.0
offset_top = 594.0
offset_right = 236.0
offset_bottom = 632.0
scale = Vector2(1.35, 1.35)
texture = ExtResource("10_e8ei4")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 190.0
offset_top = 62.0
offset_right = 294.0
offset_bottom = 102.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_nkbn4")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "START"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 182.0
offset_top = 212.0
offset_right = 286.0
offset_bottom = 252.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_nkbn4")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "INPUT"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 168.0
offset_top = 372.0
offset_right = 282.0
offset_bottom = 412.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_nkbn4")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "PROCESS"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel4" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 178.0
offset_top = 526.0
offset_right = 282.0
offset_bottom = 566.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_nkbn4")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "OUTPUT
"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel5" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 200.0
offset_top = 680.0
offset_right = 304.0
offset_bottom = 720.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_nkbn4")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "END
"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="XButton" type="TextureButton" parent="."]
offset_left = 1091.0
offset_top = 7.0
offset_right = 1131.0
offset_bottom = 47.0
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("12_0nruy")
texture_pressed = ExtResource("13_16p15")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 536.0
offset_top = 56.0
offset_right = 638.0
offset_bottom = 102.0
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="XButton" to="." method="_on_x_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="Start/Slot1"]
[editable path="Start/Slot2"]
[editable path="Start/Slot3"]
[editable path="Start/Slot4"]
[editable path="Start/Slot5"]
